# NIPAP

./: .gitignore  .hadolint.yaml  .landscape.yml  .travis.yml  CONTRIBUTING.md  Changelog  Dockerfile  Dockerfile.nipapd  Dockerfile.whoisd  Dockerfile.www  INSTALL  LICENSE  Makefile  NEWS  README.dev  README.md  README.rst  TODO  index.html  nipap.gpg.key
_includes/: footer.html  header.html
ca_certs/: README.rst  install-certs.sh
cli/: MANIFEST.in  README.rst  bash_complete  command.py  find.nw  nipap  nipap-helper  nipap-helper.py  nipap.py  nipap_cli.py  nipap_helper.py  nipaprc  setup.py  xmltest.py
css/: nipap.css
docs/: INSTALL  INSTALL.html  INSTALL.rst  Makefile  README.design  README.logging  api  config-cli.html  config-cli.rst  config-nipapd.html  config-nipapd.rst  config-www.html  config-www.rst  debian-install.rst  development.rst  getting-started-development.rst  getting-started-installation.rst  getting-started.rst  install-debian-12.rst  install-debian.html  install-debian.rst  install-unix.html  install-unix.rst  release-handling.rst
jnipap/: .gitignore  Connection.java  Jnipap.java  JnipapTester.java  Makefile  README.rst  Schema.java  Test.java  build.gradle
nap/: MANIFEST.in  README.txt  development.ini  setup.cfg  setup.py  test.ini
nap-www/: MANIFEST.in  README.txt  development.ini  setup.cfg  setup.py  test.ini
napd/: auth.py  authfactory.py  authlib.py  middle.py  nap.py  napd  nipap-passwd  nipap.conf  nipapconfig.py  nipapd  setup.py  xml-test.py  xmlrpc.py
nipap/: .nipaprc  MANIFEST.in  Makefile  README.rst  entrypoint.sh  local_auth.db  nipap-passwd  nipap-passwd.man.rst  nipap.conf  nipap.conf.dist  nipapd  nipapd.man.rst  pyproject.toml  requirements.txt  setup.py  xml-test.py  xmlbench.py
nipap-cli/: Makefile  bash_complete  helper-nipap  nipap  nipap.man.rst  nipaprc  pyproject.toml  requirements.txt  setup.py
nipap-www/: MANIFEST.in  Makefile  README.txt  development.ini  entrypoint.sh  nipap-www.ini  nipap-www.wsgi  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
nipap-www/debian/: changelog  config  control  copyright  files  install  postinst  preinst  py3dist-overrides  pydist-overrides  rules  templates
nipap-www/debian/source/: options
nipap-www/docs/: index.txt
nipap-www/nipap_www.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nipap-www/nipapwww/: __init__.py  auth.py  ng.py  prefix.py  static.py  tracing.py  version.py  websetup.py  xhr.py
nipap-www/nipapwww/config/: deployment.ini_tmpl  environment.py  middleware.py  routing.py
nipap-www/nipapwww/controllers/: auth.py  code.py  error.py  ng.py  pool.py  prefix.py  schema.py  version.py  vrf.py  xhr.py
nipap-www/nipapwww/lib/: base.py  helpers.py
nipap-www/nipapwww/public/: angular-1.7.2.min.js  angular-route-1.7.2.min.js  angular-route-1.7.2.min.js.map  app.js  bootstrap.css  controllers.js  directives.js  filters.js  jquery.tipTip.minified.js  ng-infinite-scroll.min.js  nipap.css  nipap.js  services.js
nipap-www/nipapwww/public/templates/: pool_add.html  pool_edit.html  pool_form.html  pool_list.html  pool_selector.html  pool_selector_popup.html  prefix_add.html  prefix_edit.html  prefix_form.html  vrf_add.html  vrf_edit.html  vrf_form.html  vrf_list.html  vrf_selector.html
nipap-www/nipapwww/static/: app.js  directives.js  nipap.css  nipap.js  services.js  tag-it.min.js
nipap-www/nipapwww/static/css/: nipap.css
nipap-www/nipapwww/static/templates/: pool_add.html  pool_edit.html  pool_list.html  pool_selector.html  pool_selector_popup.html  prefix_add.html  prefix_edit.html  prefix_form.html  vrf_add.html  vrf_edit.html  vrf_form.html  vrf_list.html  vrf_selector.html
nipap-www/nipapwww/templates/: base.html  login.html  macros.html  ng-pool.html  ng-prefix.html  ng-prefix_add.html  ng-vrf.html  pool_add.html  pool_edit.html  pool_form.html  pool_list.html  prefix_add.html  prefix_add_containers.html  prefix_edit.html  prefix_form.html  prefix_list.html  prefix_remove_confirm.html  schema_add.html  schema_edit.html  schema_list.html  ssoError.html  unauthorized.html  version.html  vrf_add.html  vrf_edit.html  vrf_form.html  vrf_list.html
nipap-www/nipapwww/tests/functional/: test_auth.py  test_ng.py  test_pool.py  test_prefix.py  test_version.py  test_vrf.py  test_xhr.py
nipap/debian/: changelog  control  copyright  nipap-common.links  nipap.init  nipapd.config  nipapd.default  nipapd.init  nipapd.install  nipapd.manpages  nipapd.postinst  nipapd.postrm  nipapd.templates  py3dist-overrides  rules
nipap/debian/etc/init.d/: nipapd
nipap/debian/source/: options
nipap/nipap/: __init__.py  authlib.py  backend.py  daemon.py  db_schema.py  errors.py  kafka_producer.py  nipap.py  nipap_passwd.py  nipapconfig.py  nipapd.py  rest.py  smart_parsing.py  tracing.py  xmlrpc.py
nipap/sql/: Makefile  clean.plsql  find_free_prefix.plsql  functions.plsql  get_prefix.plsql  ip_net.plsql  triggers.plsql  upgrade-1-2.plsql  upgrade-2-3.plsql  upgrade-3-4.plsql  upgrade-4-5.plsql  upgrade-5-6.plsql  upgrade-6-7.plsql  upgrade-7-8.plsql
nso-nipap/: Makefile  README.md
ojnipap/: Makefile  README.rst
pynipap/: Makefile  README.rst  pynipap.py  pyproject.toml  setup.py  tracing.py
pynipap/debian/: changelog  control  rules
pynipap/debian/source/: options
pynipap/pynipap/: __init__.py  pynipap.py  tracing.py
sql/: Makefile  calc_indent.plsql  clean.plsql  find_free_prefix.plsql  get_ip.plsql  get_prefix.plsql  ip_net.plsql
t/: napbase.py  sql.py
tests/: napbase.py  nipap-ro.py  nipapbase.py  nipaptest.py  speedtest.py  sql.py  test_cli.py  test_nipap_ro.py  test_rest.py  test_xmlrpc.py  upgrade-after.py  upgrade-before.py  xmlrpc.py
whoisd/: MANIFEST.in  Makefile  README.rst  entrypoint.sh  nipap-whoisd  nipap-whoisd.man.rst  nipap_whoisd.py  nipapwhoisd  pyproject.toml  requirements.txt  setup.py  whoisd  whoisd.conf.dist
whoisd/debian/: changelog  config  control  copyright  default  init  install  nipap-whoisd.manpages  postinst  rules  templates
whoisd/debian/source/: options
(+1023 files in other folders)
