[project]
name = "nipap-whoisd"
dynamic = ["version", "description"]
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Telecommunications Industry',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Topic :: Internet'
]
keywords = ["nipap"]
dependencies = [
  "pynipap"
]

[project.urls]
Homepage = "http://SpriteLink.github.io/NIPAP"

[tool.setuptools.dynamic]
version = {attr = "nipap_whoisd.__version__"}

[build-system]
requires = [
  "setuptools",
  # Need to be pinned to 0.20.1 in Ubuntu 24.04 as using the latest 0.21.2
  # gives a diff during .deb package build. Unfortunately the files are
  # generated twice - first once in a virtualenv (using the version specified
  # here) and then once without a virtualenv using the one from the system.
  # There two runs produce different outputs (wich they shouldn't) causing a
  # diff and the package utils to b0rk out.
  "docutils==0.20.1"
]
build-backend = "setuptools.build_meta"
